# A3-numpy-playground

./: Makefile  README.md  a_movement.py  b_transpose.py  c_elementwise.py  conftest.py  d_reduce.py  e_broadcasting.py  f_advanced_broadcasting.py  g_statistics.py  h_geometry.py  i_vectorisation.py  j_challenge.py  pyproject.toml  submission.json  submit.py
tests/: test_a_movement.py  test_b_transpose.py  test_c_elementwise.py  test_d_reduce.py  test_e_broadcasting.py  test_f_advanced_broadcasting.py  test_g_statistics.py  test_h_geometry.py  test_i_vectorisation.py  test_j_challenge.py
